Added figures to bio circuits

--- a/SignalP.tex
+++ b/SignalP.tex
@@ -19,8 +19,40 @@ We are used to talk about electronic circuits by describing their input output r
 In this chapter we will see and study several examples of how to build different types of circuits with just a few components. we will build linear transducers, interrupters, switches, oscillators -- clocks-- and circuits able to show adaptation.
 
 \subsection{Linear response}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{BiocircLinear}
+	\end{center}
+	\caption{ ... }
+	\label{fig:bclin}
+\end{figure}
+\subsection{Saturated response}
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{BiocircMM}
+	\end{center}
+	\caption{ ... }
+	\label{fig:bcsat}
+\end{figure}
 \subsection{Buzzer (interrupter)}
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{BiocircMM}
+	\end{center}
+	\caption{ ... }
+	\label{fig:bcsigmoid}
+\end{figure}
 \subsection{Switch}
 \subsection{Oscillators (clocks)}
 \subsection{Adaptation}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=0.3\textwidth]{BiocircAdapt}
+	\end{center}
+	\caption{ ... }
+	\label{fig:bcadapt}
+\end{figure}
+
 \subsection{Quorum sensing}
