Some figures sent to margin

--- a/Continuous.tex
+++ b/Continuous.tex
@@ -418,13 +418,13 @@ So any differential equation of order $n$ can be considered a first order differ
 \subsection{Plotting solutions}
 
 The particular solutions of a differential equation can be plotted as each variable being a function of time as shown in figure \ref{fig:cmplxeigen}, but there are alternative representations. A frequently used plot is the phase space like the one shown in figure \ref{fig:phase_plane}. In this plot, the state variables of the system are used as axes. Since time is not explicitly included in the plot, the lines showing the evolution of the system have arrows that indicate the direction in which the system moves as time goes by. In a plot like this, several particular solutions can be shown at the same time, the line representing each solution is called an orbit. 
-\begin{figure}
+\begin{marginfigure}
 	\begin{center}
-		\includegraphics[width=0.7\textwidth]{phase_plane}
+		\includegraphics[width=0.9\textwidth]{phase_plane}
 	\end{center}
 	\caption{Phase plane representation of a particular solution of a two variable oscillatory system.}
 	\label{fig:phase_plane}
-\end{figure}
+\end{marginfigure}
 
 \section{Non-linear systems}
 
@@ -549,13 +549,13 @@ Again, the Jacobian matrix contains the partial derivatives evaluated at the ste
 	\frac{dX}{dt} =&\: k_3 \, S - k_4 \, X  \nonumber
 \end{align}
 
-\begin{figure}
+\begin{marginfigure}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{signalpathd}
+		\includegraphics[width=0.7\textwidth]{signalpathd}
 	\end{center}
 	\caption{A signaling pathway with input $S$ and output $R$. }
 	\label{fig:signalpathd}
-\end{figure}
+\end{marginfigure}
 
 The system has a steady state at:
 
